src/test/deca/context/valid/created/affichage/print_var_float.deca
// Description:
//  affiche variable float
// Resultats :
// 		OK


{
   float x = 3.0;
   println(x);
}
