src/test/deca/context/invalid/created/wrongTypes/wrong_type_INT_FLOAT.deca
// Description:
//  Assign un float to int
// 
// Resultats:
//    Ligne 8 : types don't match!
{
    int x;
    x = 5.6;
}